--- a/site/entry.html
+++ b/site/entry.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://unpkg.com/pdbe-molstar@3.7.1/build/pdbe-molstar-light.css" />
 
   <style>
-    :root { --gap: 12px; --card-border: #ddd; }
+    :root { --gap: 12px; --card-border: #ddd; --accent: #0b6cff; --hover: #eef4ff; --sel: #dce7ff; }
     html, body { height: 100%; margin: 0; background: #fff; }
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
 
@@ -20,7 +20,7 @@
 
     /* 2-column layout */
     .main {
-      height: calc(100vh - 54px); /* header height allowance */
+      height: calc(100vh - 54px);
       display: flex;
       gap: var(--gap);
       padding: var(--gap);
@@ -28,7 +28,7 @@
     }
     .col {
       flex: 1 1 50%;
-      min-width: 0; /* allow content to shrink */
+      min-width: 0;
       display: flex;
       flex-direction: column;
       border: 1px solid var(--card-border);
@@ -37,46 +37,50 @@
       background: #fff;
     }
 
-    /* Left: Mol* viewer fills column */
+    /* Left: Mol* */
     #viewer-wrap { position: relative; flex: 1 1 auto; }
     #viewer { position: absolute; inset: 0; }
-    /* Ensure the canvas always fills */
     #viewer .msp-viewport, #viewer canvas {
-      width: 100% !important;
-      height: 100% !important;
-      max-width: 100% !important;
-      max-height: 100% !important;
+      width: 100% !important; height: 100% !important; max-width: 100% !important; max-height: 100% !important;
     }
-
-    /* Hide Mol* UI chrome to keep a clean canvas */
     .msp-left-panel,.msp-right-panel,.msp-bottom-panel,
     .msp-layout-controls,.msp-viewport-controls,
     .msp-plugin-ui,.msp-controls,.msp-controls-wrapper,.msp-help-toast {
-      display: none !important;
-      visibility: hidden !important;
-      pointer-events: none !important;
+      display: none !important; visibility: hidden !important; pointer-events: none !important;
     }
 
-    /* Right: sequence panel */
+    /* Right: sequence */
     .seq-header {
       display: flex; align-items: center; gap: 12px;
       padding: 10px 12px; border-bottom: 1px solid var(--card-border);
-      background: #fafafa;
-      flex-wrap: wrap;
+      background: #fafafa; flex-wrap: wrap;
     }
     .seq-header strong { margin-right: 4px; }
     .seq-header a { text-decoration: none; }
-    .btn {
-      padding: 6px 10px; border: 1px solid var(--card-border); border-radius: 6px; cursor: pointer; background: #fff;
-    }
-    .seq-body {
-      flex: 1 1 auto;
-      overflow: auto;
-      padding: 12px;
-    }
-    pre { margin: 0; white-space: pre-wrap; word-break: break-word; font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; }
+    .btn { padding: 6px 10px; border: 1px solid var(--card-border); border-radius: 6px; cursor: pointer; background: #fff; }
+    .seq-body { flex: 1 1 auto; overflow: auto; padding: 12px; }
 
-    /* Error banner */
+    /* Interactive sequence grid */
+    .seq-grid {
+      font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
+      font-size: 13px; line-height: 1.5;
+      display: grid;
+      grid-template-columns: auto 1fr;  /* ruler + residues */
+      row-gap: 6px; column-gap: 10px;
+      user-select: none;                /* we handle selection ourselves */
+    }
+    .ruler { color:#666; white-space: nowrap; }
+    .block { white-space: nowrap; }
+    .res {
+      display: inline-block; width: 12px; text-align: center; border-radius: 3px;
+      padding: 2px 0; margin: 0 1px;
+    }
+    .res:hover { background: var(--hover); }
+    .res.selected { background: var(--sel); outline: 1px solid #c8dafc; }
+    .block .tick {
+      display: inline-block; width: 12px; text-align: center; color:#999; font-size: 10px;
+    }
+
     .error { color: #b00020; padding: 8px 12px; border-top: 1px solid var(--card-border); background: #fff7f7; }
   </style>
 </head>
@@ -102,9 +106,10 @@
         <a id="cifLink"   target="_blank" rel="noopener">CIF</a>
         <a id="fastaLink" target="_blank" rel="noopener">FASTA</a>
         <button id="copyBtn" class="btn" type="button">Copy FASTA</button>
+        <span id="selLabel" style="margin-left:auto;color:#555;"></span>
       </div>
       <div class="seq-body">
-        <pre id="fasta">Loading...</pre>
+        <div id="seqInteractive" class="seq-grid">Loading…</div>
       </div>
       <div id="seq-error" class="error" style="display:none;"></div>
     </div>
@@ -113,134 +118,240 @@
   <script>
     function getParam(name){ return new URL(location.href).searchParams.get(name); }
 
+    // --- Small helpers to talk to PDBe Mol* ---
+    function highlightResidue(plugin, chainId, idx) {
+      plugin?.viewerInstance?.visual?.highlight?.({
+        data: [{ struct_asym_id: chainId, start_residue_number: idx, end_residue_number: idx }]
+      });
+    }
+    function clearHighlight(plugin) {
+      plugin?.viewerInstance?.visual?.clearHighlight?.();
+    }
+    function selectRange(plugin, chainId, startIdx, endIdx) {
+      const a = Math.min(startIdx, endIdx), b = Math.max(startIdx, endIdx);
+      plugin?.viewerInstance?.visual?.select?.({
+        data: [{ struct_asym_id: chainId, start_residue_number: a, end_residue_number: b }]
+      });
+    }
+    function clearSelection(plugin) {
+      plugin?.viewerInstance?.visual?.clearSelection?.();
+    }
+
+    // Build a simple AlphaFold-like interactive sequence
+    function renderInteractiveSequence(container, seq, opts) {
+      const { onHover, onLeave, onSelect, blockSize=50, group=10 } = opts;
+      container.innerHTML = '';
+
+      // Build rows of 50 residues with a left ruler
+      const rows = Math.ceil(seq.length / blockSize);
+      for (let r = 0; r < rows; r++) {
+        const start = r*blockSize + 1;
+        const end   = Math.min((r+1)*blockSize, seq.length);
+
+        // Ruler (e.g., "1", "51", "101", ...)
+        const ruler = document.createElement('div');
+        ruler.className = 'ruler';
+        ruler.textContent = start.toString();
+        container.appendChild(ruler);
+
+        // Residue block
+        const block = document.createElement('div');
+        block.className = 'block';
+        for (let i = start; i <= end; i++) {
+          const aa = seq[i-1];
+          const span = document.createElement('span');
+          span.className = 'res';
+          span.textContent = aa || ' ';
+          span.dataset.pos = String(i);
+
+          // visual group spacing ticks every "group"
+          if ((i-1) % group === 0) {
+            const tick = document.createElement('span');
+            tick.className = 'tick';
+            tick.textContent = '|';
+            block.appendChild(tick);
+          }
+
+          span.addEventListener('mouseenter', () => onHover?.(i, span));
+          span.addEventListener('mouseleave', () => onLeave?.(i, span));
+          span.addEventListener('mousedown', (e) => {
+            e.preventDefault();
+            onSelect?.(i, i, 'start');
+          });
+          span.addEventListener('mouseover', (e) => {
+            if (e.buttons === 1) onSelect?.(Number(span.dataset.pos), Number(span.dataset.pos), 'extend');
+          });
+          span.addEventListener('mouseup', (e) => {
+            onSelect?.(Number(span.dataset.pos), Number(span.dataset.pos), 'end');
+          });
+
+          block.appendChild(span);
+        }
+        container.appendChild(block);
+      }
+    }
+
     async function load(){
-      const uid = getParam('uid');
-      const titleEl = document.getElementById('title');
-      const fastaEl = document.getElementById('fasta');
-      const copyBtn = document.getElementById('copyBtn');
-      const cifLink = document.getElementById('cifLink');
-      const fastaLink = document.getElementById('fastaLink');
-      const viewerErr = document.getElementById('viewer-error');
-      const seqErr = document.getElementById('seq-error');
+      const uid      = getParam('uid');
+      const titleEl  = document.getElementById('title');
+      const seqGrid  = document.getElementById('seqInteractive');
+      const selLabel = document.getElementById('selLabel');
+      const copyBtn  = document.getElementById('copyBtn');
+      const cifLink  = document.getElementById('cifLink');
+      const fastaLink= document.getElementById('fastaLink');
+      const viewerErr= document.getElementById('viewer-error');
+      const seqErr   = document.getElementById('seq-error');
 
       titleEl.textContent = uid || '(missing uid)';
 
-      // Load catalog with a cache-buster
+      // Load catalog
       let catalog;
       try {
         catalog = await fetch('../data/entries.json?v=' + Date.now()).then(r=>r.json());
-      } catch (e) {
-        // Show errors on both sides
-        viewerErr.style.display = 'block';
-        seqErr.style.display = 'block';
-        viewerErr.textContent = 'Could not load entries.json.';
-        seqErr.textContent = 'Could not load entries.json.';
+      } catch {
+        viewerErr.style.display = seqErr.style.display = 'block';
+        viewerErr.textContent = seqErr.textContent = 'Could not load entries.json.';
         return;
       }
-
       const entry = (catalog.entries || []).find(e => e.uniprot_id === uid);
       if(!entry){
-        viewerErr.style.display = 'block';
-        seqErr.style.display = 'block';
-        viewerErr.textContent = 'Entry not found in catalog.';
-        seqErr.textContent = 'Entry not found in catalog.';
+        viewerErr.style.display = seqErr.style.display = 'block';
+        viewerErr.textContent = seqErr.textContent = 'Entry not found in catalog.';
         return;
       }
 
       const cifUrl   = entry.files.structure_cif;
       const fastaUrl = entry.files.sequence_fasta;
-
-      // Wire file links
       cifLink.href   = cifUrl;
       fastaLink.href = fastaUrl;
 
-      // ---- Right: FASTA ----
+      // Fetch sequence
+      let sequence = '';
       try {
-        const t = await fetch(fastaUrl).then(r=>r.text());
-        fastaEl.textContent = t;
-        copyBtn.onclick = async () => {
-          try {
-            await navigator.clipboard.writeText(t);
-            const prev = copyBtn.textContent;
-            copyBtn.textContent = 'Copied!';
-            setTimeout(()=> (copyBtn.textContent = prev), 1200);
-          } catch {}
-        };
+        const raw = await fetch(fastaUrl).then(r=>r.text());
+        // Strip FASTA header line(s)
+        sequence = raw.split(/\r?\n/).filter(line => !line.startsWith('>')).join('').trim();
       } catch {
-        fastaEl.textContent = '';
         seqErr.style.display = 'block';
         seqErr.textContent = 'FASTA not available.';
         copyBtn.disabled = true;
       }
 
-      // ---- Left: PDBe Mol* (direct, no iframe) ----
-      // Decide format from extension; default mmcif
-      const fmt = (cifUrl.toLowerCase().endsWith('.cif') && !cifUrl.toLowerCase().endsWith('.mmcif')) ? 'cif' : 'mmcif';
+      // Copy button (full FASTA including header)
+      try {
+        const rawAll = await fetch(fastaUrl).then(r=>r.text());
+        copyBtn.onclick = async () => {
+          await navigator.clipboard.writeText(rawAll);
+          const prev = copyBtn.textContent;
+          copyBtn.textContent = 'Copied!';
+          setTimeout(()=> (copyBtn.textContent = prev), 1200);
+        };
+      } catch {}
 
+      // ---- Mol* viewer (left) ----
+      const fmt = (cifUrl.toLowerCase().endsWith('.cif') && !cifUrl.toLowerCase().endsWith('.mmcif')) ? 'cif' : 'mmcif';
       let viewer;
       try {
         viewer = new PDBeMolstarPlugin();
-      } catch (e) {
+      } catch {
         viewerErr.style.display = 'block';
         viewerErr.textContent = 'Failed to create PDBe Mol* plugin.';
         return;
       }
-
-      // Minimal, robust options
       const options = {
         customData: { url: cifUrl, format: fmt },
-        hideControls: true,          // hide UI chrome
-        expanded: false,             // keep compact layout
-        bgColor: { r:255, g:255, b:255 } // white background
-        // You can add: visualStyle: 'cartoon'  // PDBe option; defaults are good
+        hideControls: true,
+        expanded: false,
+        bgColor: { r:255, g:255, b:255 }
       };
-
       try {
         viewer.render('viewer', options);
-      } catch (e) {
+      } catch {
         viewerErr.style.display = 'block';
         viewerErr.textContent = 'Mol* render error.';
         return;
       }
+      // Make accessible for handlers
+      window.__pdbe = viewer;
 
-      // Defensive: if PDBe injects controls later, hide again
-      const root = document.getElementById('viewer');
-      const hideChrome = () => {
-        [
-          '.msp-left-panel','.msp-right-panel','.msp-bottom-panel',
-          '.msp-layout-controls','.msp-viewport-controls',
-          '.msp-plugin-ui','.msp-controls','.msp-controls-wrapper','.msp-help-toast'
-        ].forEach(sel => {
-          document.querySelectorAll(sel).forEach(el => {
-            el.style.display='none'; el.style.visibility='hidden'; el.style.pointerEvents='none';
-          });
-        });
-      };
-      hideChrome(); setTimeout(hideChrome, 100); setTimeout(hideChrome, 500);
-      new MutationObserver(hideChrome).observe(root, { childList:true, subtree:true });
-
-      // (Optional) Best-effort: mild ambient light + outline + uniform color
-      // Safe to leave in; if unsupported in this build, it’s ignored.
+      // Optional soft lighting + outline + uniform color (best-effort)
       function styleScene() {
         try {
           const plugin = viewer?.viewerInstance?.plugin;
           const c3d = plugin?.canvas3d;
           if (c3d?.setProps) {
             c3d.setProps({
-              renderer: { ambientIntensity: 0.6 }, // “soft” feel
+              renderer: { ambientIntensity: 0.6 },
               postprocessing: { outline: { enable: true, scale: 1.0, threshold: 0.8 } }
             });
           }
-          // Uniform color (steel blue) if accessible
           const reps = plugin?.managers?.structure?.representation?.componentReprs || [];
-          const val = { r: 70/255, g: 130/255, b: 180/255 };
-          reps.forEach(cr => {
-            try { cr.setTheme?.({ color: { name: 'uniform', params: { value: val } } }); } catch {}
-          });
+          const val = { r: 70/255, g: 130/255, b: 180/255 }; // steel blue
+          reps.forEach(cr => { try { cr.setTheme?.({ color: { name: 'uniform', params: { value: val } } }); } catch {} });
         } catch {}
       }
       setTimeout(styleScene, 400);
       setTimeout(styleScene, 1200);
+
+      // ---- Interactive sequence (right) ----
+      if (!sequence) {
+        seqGrid.textContent = 'No sequence available.';
+        return;
+      }
+
+      // Change this if your chain ID differs (e.g., 'A' is typical for monomers)
+      const CHAIN_ID = 'A';
+
+      let dragStart = null; // residue index (1-based) when dragging
+      let lastSpan = null;
+
+      renderInteractiveSequence(seqGrid, sequence, {
+        blockSize: 50,
+        group: 10,
+        onHover: (i, span) => {
+          lastSpan = span;
+          span.classList.add('hover');
+          highlightResidue(viewer, CHAIN_ID, i);
+          selLabel.textContent = `Hover: ${CHAIN_ID}:${i}`;
+        },
+        onLeave: (i, span) => {
+          span.classList.remove('hover');
+          clearHighlight(viewer);
+          if (!dragStart) selLabel.textContent = '';
+        },
+        onSelect: (i, _i2, phase) => {
+          if (phase === 'start') {
+            dragStart = i;
+            clearSelection(viewer);
+            selectRange(viewer, CHAIN_ID, i, i);
+            markRange(seqGrid, i, i);
+            selLabel.textContent = `Selected: ${CHAIN_ID}:${i}`;
+          } else if (phase === 'extend' && dragStart != null) {
+            selectRange(viewer, CHAIN_ID, dragStart, i);
+            markRange(seqGrid, dragStart, i);
+            const a = Math.min(dragStart, i), b = Math.max(dragStart, i);
+            selLabel.textContent = `Selected: ${CHAIN_ID}:${a}-${b}`;
+          } else if (phase === 'end') {
+            if (dragStart != null) {
+              const a = Math.min(dragStart, i), b = Math.max(dragStart, i);
+              selectRange(viewer, CHAIN_ID, a, b);
+              markRange(seqGrid, a, b);
+              selLabel.textContent = `Selected: ${CHAIN_ID}:${a}-${b}`;
+            }
+            dragStart = null;
+          }
+        }
+      });
+
+      // Clear selection highlight in sequence
+      function markRange(container, a, b) {
+        const A = Math.min(a,b), B = Math.max(a,b);
+        container.querySelectorAll('.res').forEach(el => el.classList.remove('selected'));
+        for (let i=A; i<=B; i++) {
+          const el = container.querySelector(`.res[data-pos="${i}"]`);
+          if (el) el.classList.add('selected');
+        }
+      }
     }
 
     load();
